# schedule-shift-mcp

./: .gitignore  API_COMPLIANCE.md  MCP_TROUBLESHOOTING.md  README.md  TESTING.md  TEST_SCENARIOS.md  api_formatter.py  app.py  diagnose_mcp.py  mcp_server.py  pyproject.toml  run_mcp_server.py  storage.py  test_mcp.py
data/: db.json
