[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "schedule-shift-mcp"
version = "0.1.0"
description = "Education schedule shift MCP server over Streamable HTTP"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "fastmcp>=0.4.0",
    "pydantic>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
]


